--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-spring/three": "^9.7.3",
     "@react-three/drei": "^9.99.0",
     "@react-three/fiber": "^8.15.16",
+    "gltfjsx": "^6.2.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1"
