--- a/package.json
+++ b/package.json
@@ -32,5 +32,10 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.0"
+  },
+  
+  "engines": {
+    "node": "20.17.0",
+    "npm":"10.8.2"
   }
 }
